Created park details component for single park. Restructured code in parkStore.ts Made some small changes to parkLists.

--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -14,8 +14,8 @@ body {
   background: #5C9980;
 }
 
-.ui.menu .item {
-  color: #EAEAEA;
+.ui.segment {
+  background:#EAEAEA;
 }
 
 /* Park Card styles */
@@ -30,4 +30,9 @@ body {
 
 .ui.card > .image {
   max-height:425px;
+}
+
+#map {
+  height: 400px;
+  width: 100%;
 }
