--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -36,3 +36,26 @@ body {
   height: 400px;
   width: 100%;
 }
+
+/* Home Page Styles */
+.masthead {
+  display: flex;
+  align-items: center;
+  height: 100vh;  
+  background-image: linear-gradient(to right, #1f4037, #99f2c8) !important;
+}
+
+.masthead .ui.menu .ui.button,
+.ui.menu a.ui.inverted.button {
+  margin-left: 0.5em;
+}
+
+.masthead h1.ui.header {
+  font-size: 4em;
+  font-weight: normal;
+}
+
+.masthead h2 {
+  font-size: 1.7em;
+  font-weight: normal;
+}
