Implemented Google Maps API loosely based off tutorial on youtube, modified to dynamically get park lat/long Had some issues with map only loading on refresh, not when routed to component. Fixed that but then coordinates for map are only being updated after the page loads. Found issue with boolean in useeffect and reset it at end of useEffect. This appears to correct the issue. Will update functions to work in MobX store in the future.

--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: #5C9980;
+  background-color: #EAEAEA !important; 
 }
 
 /* NavBar styles */
@@ -32,8 +32,15 @@ body {
   max-height:425px;
 }
 
-#map {
-  height: 400px;
+.map-outer {
+  display: flex;
+  justify-content: center;
+}
+
+.map-container {
+  display: flex;
+  justify-content: center;
+  height: 72vh;
   width: 100%;
 }
 
