Fixed issues in VisitLogDto and MediatR classes to get the accurate information. Added front end functionality for VisitLogForm, seeing Visit Logs and Adding them from ParkDashboard Fixed bugs with filtering visits by park. Simplified styles till closer to publishing. Next is adding and testing edit and deleting visit logs.

--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .ui.borderless.menu {
-  background: #5C9980;
+  background: #EAEAEA;
 }
 
 .ui.segment {
@@ -65,4 +65,14 @@ body {
 .masthead h2 {
   font-size: 1.7em;
   font-weight: normal;
+}
+
+.react-calendar {
+  width: 100%;
+  border: none;
+  box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
 }
